--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -11,3 +11,24 @@ body {
 p#prevPageLink {
 	margin-top: 20px;
 }
+
+input.searchInput {
+	margin-left: 10px;
+}
+
+ul.categoriesList {
+	li {
+		height: 40px;
+		word-wrap: break-word;
+	}
+
+	list-style: none;
+	padding: 0 0 0 2%;
+	margin: 4% 0 0 0;
+}
+
+@media screen and (max-width: 768px){
+	input.newCategoryInput {
+		margin-bottom: 5px;
+	}
+}
