--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -4,6 +4,10 @@ body {
 	min-width: 320px;
 }
 
+h1 {
+	word-wrap: break-word;
+}
+
 .list-group-item {
 	padding: 0.5% 2%;
 }
@@ -25,6 +29,23 @@ ul.categoriesList {
 	list-style: none;
 	padding: 0 0 0 2%;
 	margin: 4% 0 0 0;
+}
+
+
+a.editMode {
+	display: none;
+}
+
+input.editCategory {
+	display: none;
+}
+
+input.editMode {
+	display: inline;
+}
+
+form.deleteCategoryForm {
+	display: inline;
 }
 
 @media screen and (max-width: 768px){
