--- a/public/css/app.css
+++ b/public/css/app.css
@@ -24,7 +24,7 @@ ul.categoriesList {
 a.editMode {
   display: none; }
 
-input.editCategory {
+input.editCategoryInput {
   display: none; }
 
 input.editMode {
@@ -33,8 +33,19 @@ input.editMode {
 form.deleteCategoryForm {
   display: inline; }
 
+div.alert {
+  position: fixed;
+  left: 50%;
+  text-align: center;
+  z-index: 100; }
+  div.alert ul {
+    list-style-type: none;
+    padding: 0; }
+
 @media screen and (max-width: 768px) {
   input.newCategoryInput {
-    margin-bottom: 5px; } }
+    margin-bottom: 5px; }
+  div.alert {
+    left: 0; } }
 
 /*# sourceMappingURL=app.css.map */
