--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -48,7 +48,7 @@ form.deleteCategoryForm {
 	display: inline;
 }
 
-div.alert {
+div.alertDismiss {
 	ul {
 		list-style-type: none;
 		padding: 0;
@@ -65,7 +65,7 @@ div.alert {
 		margin-bottom: 5px;
 	}
 
-	div.alert {
+	div.alertDismiss {
 		left:0;
 	}
 }
