--- a/public/css/app.css
+++ b/public/css/app.css
@@ -42,6 +42,9 @@ div.alertDismiss {
     list-style-type: none;
     padding: 0; }
 
+div.container-top-margin {
+  margin-top: 5%; }
+
 @media screen and (max-width: 768px) {
   input.newCategoryInput {
     margin-bottom: 5px; }
