--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -60,6 +60,10 @@ div.alertDismiss {
 	z-index:100;
 }
 
+div.container-top-margin {
+	margin-top: 5%;
+}
+
 @media screen and (max-width: 768px){
 	input.newCategoryInput {
 		margin-bottom: 5px;
