--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -64,6 +64,10 @@ div.container-top-margin {
 	margin-top: 5%;
 }
 
+textarea {
+	resize: none;
+}
+
 @media screen and (max-width: 768px){
 	input.newCategoryInput {
 		margin-bottom: 5px;
